fix drop z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,12 @@ body {
     max-width: 100%;
     overflow-x: hidden;
 }
-
+.column {
+    background-color: whitesmoke;
+    border-radius: 4px;
+    min-width: 400px;
+    max-width: 33%;
+}
 .app-container {
     display: flex;
     flex-direction: row;
@@ -14,7 +19,6 @@ body {
     border: 1px solid black;
     margin: 0 10px;
     position: relative;
-    z-index: 1;
     -webkit-user-drag: none;
     user-select: none;
     -moz-user-select: none;
@@ -69,7 +73,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    z-index: 1;
+    z-index: 100;
 }
   
   .popup::before {
@@ -91,6 +95,7 @@ body {
     min-width: 250px;
     min-height: 80px;
     padding: 10px;
+    z-index: 3;
     /* border: 1px solid black; */
     background-color: white;
     box-shadow: 0px 0px 8px 5px rgba(34, 60, 80, 0.2);
@@ -108,8 +113,14 @@ body {
     position: relative;
     align-items: center;
     margin: 10px 0;
+    width: 96.7%;
+    max-width: 400px;
+    background-color: white;
+    z-index: 99;
 }
-
+.card-content {
+    pointer-events: none;
+}
 .rm-card:before {
     top: 0;
     margin: 0 10px;
@@ -117,10 +128,19 @@ body {
     content: '\2A2F';
     font-size: 16px;
     right: 0;
+    z-index: 1;
 }
 
 .card.dragged {
     width: 92%;
-    position: absolute;
     z-index: 99;
+    position: absolute;
+}
+
+.task-content {
+    max-width: 500px;
+    max-height: 500px;
+    width: 300px;
+    height: 150px;
+
 }
